feat: complete assessment submission with final documentation and tests