@@ -1,10 +1,7 @@
 package com.fulfilment.application.monolith.warehouses.adapters.restapi;
 
-import com.fulfilment.application.monolith.warehouses.adapters.database.WarehouseRepository;
 import com.warehouse.api.WarehouseResource;
 import com.warehouse.api.beans.Warehouse;
-import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotNull;
 import java.util.List;
 
@@ -13,78 +10,83 @@ import java.util.List;
  * Exposes endpoints for managing the warehouse lifecycle (Create, Read, Update,
  * Archive).
  */
-@ApplicationScoped
+@jakarta.enterprise.context.ApplicationScoped
 public class WarehouseResourceImpl implements WarehouseResource {
 
-  @Inject
-  private WarehouseRepository warehouseRepository;
-  @Inject
-  private com.fulfilment.application.monolith.warehouses.domain.ports.CreateWarehouseOperation createWarehouseOperation;
-  @Inject
-  private com.fulfilment.application.monolith.warehouses.domain.ports.ReplaceWarehouseOperation replaceWarehouseOperation;
-  @Inject
-  private com.fulfilment.application.monolith.warehouses.domain.ports.ArchiveWarehouseOperation archiveWarehouseOperation;
+  private final com.fulfilment.application.monolith.warehouses.domain.ports.WarehouseStore warehouseStore;
+  private final com.fulfilment.application.monolith.warehouses.domain.ports.CreateWarehouseOperation createWarehouseOperation;
+  private final com.fulfilment.application.monolith.warehouses.domain.ports.ArchiveWarehouseOperation archiveWarehouseOperation;
+  private final com.fulfilment.application.monolith.warehouses.domain.ports.ReplaceWarehouseOperation replaceWarehouseOperation;
+
+  @jakarta.inject.Inject
+  public WarehouseResourceImpl(
+      com.fulfilment.application.monolith.warehouses.domain.ports.WarehouseStore warehouseStore,
+      com.fulfilment.application.monolith.warehouses.domain.ports.CreateWarehouseOperation createWarehouseOperation,
+      com.fulfilment.application.monolith.warehouses.domain.ports.ArchiveWarehouseOperation archiveWarehouseOperation,
+      com.fulfilment.application.monolith.warehouses.domain.ports.ReplaceWarehouseOperation replaceWarehouseOperation) {
+    this.warehouseStore = warehouseStore;
+    this.createWarehouseOperation = createWarehouseOperation;
+    this.archiveWarehouseOperation = archiveWarehouseOperation;
+    this.replaceWarehouseOperation = replaceWarehouseOperation;
+  }
 
   @Override
   public List<Warehouse> listAllWarehousesUnits() {
-    return warehouseRepository.getAll().stream().map(this::toWarehouseResponse).toList();
+    return warehouseStore.getAll().stream()
+        .map(this::toApi)
+        .collect(java.util.stream.Collectors.toList());
   }
 
   @Override
   public Warehouse createANewWarehouseUnit(@NotNull Warehouse data) {
-    createWarehouseOperation.create(toDomain(data));
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domainWarehouse = fromApi(data);
+    createWarehouseOperation.create(domainWarehouse);
     return data;
   }
 
   @Override
   public Warehouse getAWarehouseUnitByID(String id) {
-    var warehouse = warehouseRepository.findByBusinessUnitCode(id);
-    if (warehouse == null) {
-      // Return 404 or null depending on framework handling.
-      // Genereted interface might handle null as 204 or throw
-      // WebApplicationException.
-      // Let's return null and see or throw exception if I can verify behavior.
-      // StoreResource threw WebApplicationException(404).
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domainWarehouse = warehouseStore
+        .findByBusinessUnitCode(id);
+    if (domainWarehouse == null) {
       throw new jakarta.ws.rs.WebApplicationException("Warehouse not found", 404);
     }
-    return toWarehouseResponse(warehouse);
+    return toApi(domainWarehouse);
   }
 
   @Override
   public void archiveAWarehouseUnitByID(String id) {
-    // We only have ID. Creating a partial warehouse object or finding it first?
-    // ArchiveWarehouseUseCase uses findByBusinessUnitCode inside.
-    // So checking if it expects a full object.
-    // ArchiveWarehouseUseCase: findByBusinessUnitCode(warehouse.businessUnitCode).
-    var warehouse = new com.fulfilment.application.monolith.warehouses.domain.models.Warehouse();
-    warehouse.businessUnitCode = id;
-    archiveWarehouseOperation.archive(warehouse);
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domainWarehouse = warehouseStore
+        .findByBusinessUnitCode(id);
+    if (domainWarehouse == null) {
+      throw new jakarta.ws.rs.WebApplicationException("Warehouse not found", 404);
+    }
+    archiveWarehouseOperation.archive(domainWarehouse);
   }
 
   @Override
-  public Warehouse replaceTheCurrentActiveWarehouse(
-      String businessUnitCode, @NotNull Warehouse data) {
-    data.setBusinessUnitCode(businessUnitCode); // Ensure ID matches path
-    replaceWarehouseOperation.replace(toDomain(data));
+  public Warehouse replaceTheCurrentActiveWarehouse(String businessUnitCode, @NotNull Warehouse data) {
+    data.setBusinessUnitCode(businessUnitCode);
+    replaceWarehouseOperation.replace(fromApi(data));
     return data;
   }
 
-  private Warehouse toWarehouseResponse(
-      com.fulfilment.application.monolith.warehouses.domain.models.Warehouse warehouse) {
-    var response = new Warehouse();
-    response.setBusinessUnitCode(warehouse.businessUnitCode);
-    response.setLocation(warehouse.location);
-    response.setCapacity(warehouse.capacity);
-    response.setStock(warehouse.stock);
-    return response;
+  private Warehouse toApi(com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain) {
+    Warehouse api = new Warehouse();
+    api.setId(domain.getBusinessUnitCode());
+    api.setBusinessUnitCode(domain.getBusinessUnitCode());
+    api.setLocation(domain.getLocation());
+    api.setCapacity(domain.getCapacity());
+    api.setStock(domain.getStock());
+    return api;
   }
 
-  private com.fulfilment.application.monolith.warehouses.domain.models.Warehouse toDomain(Warehouse dto) {
-    var domain = new com.fulfilment.application.monolith.warehouses.domain.models.Warehouse();
-    domain.businessUnitCode = dto.getBusinessUnitCode();
-    domain.location = dto.getLocation();
-    domain.capacity = dto.getCapacity();
-    domain.stock = dto.getStock();
+  private com.fulfilment.application.monolith.warehouses.domain.models.Warehouse fromApi(Warehouse api) {
+    com.fulfilment.application.monolith.warehouses.domain.models.Warehouse domain = new com.fulfilment.application.monolith.warehouses.domain.models.Warehouse();
+    domain.setBusinessUnitCode(api.getBusinessUnitCode() != null ? api.getBusinessUnitCode() : api.getId());
+    domain.setLocation(api.getLocation());
+    domain.setCapacity(api.getCapacity());
+    domain.setStock(api.getStock());
     return domain;
   }
 }
